fixup! fix: layout issue with long names and descriptions

--- a/src/app/events/components/event-list.component.scss
+++ b/src/app/events/components/event-list.component.scss
@@ -11,10 +11,6 @@
 
 .event-list {
   padding: 15px;
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-  overflow: auto;
 }
 
 .filter {
