--- a/src/app/shared/components/progress-logger/progress-logger-message/progress-logger-message.component.scss
+++ b/src/app/shared/components/progress-logger/progress-logger-message/progress-logger-message.component.scss
@@ -5,3 +5,7 @@
 .highlighted-message {
   font-weight: bold;
 }
+
+.progress-text {
+  font-size: 17px;
+}
